# Nero-umu

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  neroconstants.cpp  neroconstants.h  nerodrives.cpp  nerodrives.h  nerofs.cpp  nerofs.h  neroico.cpp  neroico.h  neromanager.cpp  neromanager.h  neromanager.ui  neroonetimedialog.cpp  neroonetimedialog.ui  neropreferences.cpp  neropreferences.h  neropreferences.ui  neroprefixsettings.cpp  neroprefixsettings.h  neroprefixsettings.ui  nerorunner.cpp  nerorunner.h  nerorunnerdialog.cpp  nerorunnerdialog.h  nerorunnerdialog.ui  neroshortcut.cpp  neroshortcut.ui  nerotricks.cpp  nerotricks.h  nerotricks.ui  nerowizard.h  pics.qrc  xyz.TOS.Nero.desktop
.github/workflows/: cmake-linux.yml
img/: pics.qrc
src/: main.cpp  nerodrives.cpp  nerodrives.h  nerodrives.ui  nerofs.cpp  nerofs.h  neroico.cpp  neromanager.cpp  neromanager.h  neromanager.ui  neroonetimedialog.cpp  neroonetimedialog.h  neropreferences.cpp  neropreferences.h  neropreferences.ui  neroprefixsettings.cpp  neroprefixsettings.h  neroprefixsettings.ui  nerorunner.cpp  nerorunner.h  nerorunnerdialog.cpp  nerorunnerdialog.h  neroshortcut.cpp  neroshortcut.h  nerotricks.cpp  nerotricks.h  nerotricks.ui  nerowizard.cpp  nerowizard.h  nerowizard.ui
